--- a/source/sass/blocks/bottom.scss
+++ b/source/sass/blocks/bottom.scss
@@ -1,5 +1,5 @@
 .bottom {
-  margin-top: 0;
+  margin-top: 6px;
 
   padding-right: 20px;
   padding-left: 20px;
@@ -11,8 +11,8 @@
   justify-items: center;
   grid-template-rows: 1fr 1fr 1fr;
 
-  outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
-  outline-offset: -3px; // специальные цыета для рамок по заданию
+  // outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
+  // outline-offset: -3px; // специальные цыета для рамок по заданию
 }
 
 .bottom__visit {
@@ -21,6 +21,59 @@
   line-height: 26px;
   text-decoration: none;
   color: $black-color;
+}
+
+.bottom__social-items {
+  list-style: none;
+
+  margin-top: 0;
+
+  padding-left: 0;
+
+  display: flex;
+}
+
+.bottom__social-item {
+  margin-right: 6px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.bottom__social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: $lite-blue-color;
+}
+
+.bottom__social-link-twitter,
+.bottom__social-link-youtube {
+  width: 46px;
+  height: 48px;
+}
+
+.bottom__social-link-facebook {
+  width: 47px;
+  height: 48px;
+}
+
+.bottom__developer {
+  display: flex;
+  align-items: center;
+
+  margin-top: -9px;
+  margin-left: 2px;
+}
+
+.bottom__developer-developed {
+  margin-right: 15px;
+}
+
+.bottom__developer-pic {
+  margin-top: 5px;
 }
 
 @media (min-width: $tablet-width) {
@@ -34,6 +87,27 @@
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .bottom__visit {
+    margin-top: -28px;
+    margin-left: -44px;
+  }
+
+  .bottom__social {
+    margin-top: -5px;
+    margin-right: 3px;
+  }
+
+  .bottom__developer-link {
+    position: relative;
+    top: 2px;
+    right: 3px;
+  }
+
+  .bottom__developer {
+    margin-top: -20px;
+    margin-left: 36px;
+  }
 }
 
 @media (min-width: $desktop-width) {
@@ -41,6 +115,18 @@
     padding-right: 0;
     padding-left: 0;
 
+    position: relative;
+    bottom: 6px;
+
     background-color: $white-color;
+  }
+
+  .bottom__visit {
+    margin-top: -16px;
+    margin-left: -24px;
+  }
+
+  .bottom__developer {
+    margin-top: -20px;
   }
 }
