--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -6,8 +6,8 @@
 .menu__nav {
   background-color: $lite-blue-color;
 
-  outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
-  outline-offset: -3px; // специальные цыета для рамок по заданию
+  // outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
+  // outline-offset: -3px; // специальные цыета для рамок по заданию
 }
 
 .menu__nav-block {
@@ -19,7 +19,7 @@
 }
 
 .menu__items {
-  min-height: 55px;
+  min-height: 40px;
 
   padding-top: 10px;
   padding-right: 20px;
@@ -42,8 +42,8 @@
 
 .menu__link-btn {
   position: absolute;
-  top: 13px;
-  right: 20px;
+  top: 16px;
+  right: 13px;
 
   background: transparent;
   border: none;
@@ -70,8 +70,16 @@
   color: $white-color;
 }
 
+.menu__link-default {
+  &:hover {
+    cursor: default;
+  }
+}
+
 .menu__items-bottom {
   position: relative;
+
+  padding-top: 8px;
 
   border-bottom: none;
 
@@ -86,6 +94,10 @@
   }
 }
 
+.menu__hidden {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
   .menu {
     min-height: 56px;
@@ -94,7 +106,7 @@
   .menu__nav {
     background-color: $white-color;
 
-    outline: 3px solid $special-border-lite-green-color; // специальные цыета для рамок по заданию
+    // outline: 3px solid $special-border-lite-green-color; // специальные цыета для рамок по заданию
   }
 
   .menu__nav-block {
@@ -116,8 +128,29 @@
     border-top: none;
     border-bottom: none;
 
+    &:nth-child(1) {
+      position: relative;
+      right: 41px;
+    }
+
     &:nth-child(2) {
-      padding-left: 26px;
+      position: relative;
+      right: 25px;
+    }
+
+    &:nth-child(3) {
+      position: relative;
+      right: 10px;
+    }
+
+    &:nth-child(4) {
+      position: relative;
+      left: 9px;
+    }
+
+    &:nth-child(5) {
+      position: relative;
+      left: 21px;
     }
   }
 
@@ -158,6 +191,24 @@
 @media (min-width: $desktop-width) {
   .menu {
     min-height: 56px;
+  }
+
+  .menu__items {
+    &:nth-child(1) {
+      right: 75px;
+    }
+
+    &:nth-child(2) {
+      right: 44px;
+    }
+
+    &:nth-child(4) {
+      left: 24px;
+    }
+
+    &:nth-child(5) {
+      left: 55px;
+    }
   }
 
   .menu__logo {
