--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,12 +16,12 @@ $darker-grey-color: #eaeaea;
 $very-light-grey-color: #e5e5e5;
 $very-lighter-grey-color: #f2f2f2;
 
-$black-color:#000000;
-$black-special-color:#333333;
-$white-color:#ffffff;
-$grey-color:#eeeeee;
+$black-color: #000000;
+$black-special-color: #333333;
+$white-color: #ffffff;
+$grey-color: #eeeeee;
 
-$black-rgba-color:rgba(0, 0, 0, 0.3);
+$black-rgba-color: rgba(0, 0, 0, 0.3);
 // цвет
 
 // специальные цыета для рамок по заданию
@@ -32,6 +32,15 @@ $special-border-blue-color: #0600ff;
 
 // ширина экрана
 $tablet-width: 768px; // main
+$tablet-fix-one-width: 782px; // main
+$tablet-fix-two-width: 815px; // main
+$tablet-fix-three-width: 860px; // main
+$tablet-fix-four-width: 865px; // main
+$tablet-fix-five-width: 874px; // main
+$tablet-fix-six-width: 994px; // main
+$tablet-fix-seven-width: 1001px; // main
+$tablet-fix-eight-width: 863px; // main
+$tablet-fix-nine-width: 863px; // main
 $desktop-width: 1200px; // main
 // ширина экрана
 
